[package]
name = "sciolyff-web"
version = "0.1.0"
authors = ["Em Zhan <zqianem@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
sciolyff = { git = "https://github.com/unosmium/sciolyff-rust" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
